welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: not found: value ||
    if((nums(i+1)==nums(i)+5) && (nums(i+2)==nums(i)-1)||(nums(i+1)==nums(i)+5) && (nums(i+2)==nums(i)+1))||(nums(i+1)==nums(i)+5) && (nums(i+2)==nums(i)-2){
                                                                                                          ^has271:4: error: Boolean does not take parameters
    if((nums(i+1)==nums(i)+5) && (nums(i+2)==nums(i)-1)||(nums(i+1)==nums(i)+5) && (nums(i+2)==nums(i)+1))||(nums(i+1)==nums(i)+5) && (nums(i+2)==nums(i)-2){
                                                                                                                                                            ^